# angr-platforms

./: README.md  pyproject.toml  setup.py
angr_platforms/X86_16/: __init__.py  access.py  address_ir.py  addressing_helpers.py  alias_domains.py  alias_model.py  alias_state.py  alias_transfer.py  alu_helpers.py  analysis_helpers.py  annotations.py  arch_86_16.py  bootstrap.py  callee_name_normalization.py  calling_convention_compat.py  callsite_stack_metadata.py  callsite_summary.py  cod_extract.py  cod_known_objects.py  cod_source_rewrites.py  codegen_metadata.py  codeview_nb00.py  codeview_nb02_nb04.py  compat.py  condition_ir.py  confidence_and_assumptions.py  corpus_recovery_artifact.py  corpus_scan.py  correctness_goals.py  coverage_manifest.py  decompiler_postprocess.py  decompiler_postprocess_calls.py  decompiler_postprocess_flags.py  decompiler_postprocess_globals.py  decompiler_postprocess_jcc.py  decompiler_postprocess_loads.py  (+110 more)
docs/: 80286_real_mode_verification.md  80286_real_mode_verification_summary.json  dream_decompiler_execution_plan.md  dream_decompiler_execution_plan2.md  reko_borrow_execution_plan.md  reko_reuse_notes.md  reko_source_comparison_plan.md  x86_16_80286_real_mode_coverage.md  x86_16_cod_corpus_completion_plan.md  x86_16_decompiler_readability.md  x86_16_example_matrix.md  x86_16_interrupt_api_lowering_plan.md  x86_16_martypc_improvement_plan.md  x86_16_mnemonic_coverage.md  x86_16_reference_priority.md  x86_16_snake_recompilation_plan.md  x86_16_tricks_and_checklist.md
scripts/: build_80286_real_mode_verification_table.py  build_x16_samples.sh  build_x86_16_80286_real_mode_coverage.py  build_x86_16_mnemonic_coverage.py  build_x86_16_reference_priority.py  export_saved_angr_patches.py  inspect_x86_16_flow.py  inventory_cod_mnemonics.py  scan_cod_dir.py  trace_x86_16_paths.py  verify_80286_real_mode.py
test_programs/: README.md
tests/: conftest.py  test_acceptance_scorecard.py  test_c_text_cleanup.py  test_cod_metadata_output_policy.py  test_debugger_tui_step_over.py  test_decompilation_quality.py  test_decompile_cod_dir_parallelism.py  test_decompile_file_summary.py  test_default_signature_catalog.py  test_non_optimized_fallback_policy.py  test_omf_pat_far_transfer_variants.py  test_omf_pat_fixup_widths.py  test_omf_pat_x87_emulator_variants.py  test_omf_pat_zero_displacement.py  test_signature_matching_policy.py  test_slice_recovery_verdicts.py  test_source_sidecar.py  test_x86_16_80286_verifier.py  test_x86_16_access.py  test_x86_16_access_rewrite_artifact.py  test_x86_16_access_trait_arrays.py  test_x86_16_access_trait_policy.py  test_x86_16_access_trait_strides.py  test_x86_16_address_ir.py  test_x86_16_addressing_helpers.py  test_x86_16_alias_api_and_widening_proof.py  test_x86_16_alias_register_mvp.py  test_x86_16_alias_widening.py  test_x86_16_alu_helpers.py  test_x86_16_array_matching.py  test_x86_16_boolean_simplify.py  test_x86_16_callsite_summary.py  test_x86_16_cli.py  test_x86_16_cli_condition_text.py  test_x86_16_cli_induction_rewrite.py  test_x86_16_cli_segmented.py  test_x86_16_cli_stack_byte_offsets.py  test_x86_16_cli_stack_matchers.py  test_x86_16_cli_trace.py  test_x86_16_cod_global_statements.py  (+136 more)
x16_samples/: ICOMBI.LST  ICOMDO.LST  README.md  build_matrix.sh
(+59 files in other folders)
